<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ML Controller</string>
    <string name="version">Version number</string>
    <string name="version_desc">0.0</string>   
    
    <string name="display">Display</string>
    
    <string name="please_wait">Please Wait…</string>
    <string name="about_box">About</string>
    <string name="about_me">Created by SztupY</string>
    <string name="about_me_desc">http://sztupy.hu</string>
    
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_desc">Refresh device list</string>
    
    <string name="device_list">Device List</string>
       
    <string name="driver_sh">USB driver</string>
    <string name="driver_opt">Select USB driver to use</string>
    
    <string name="donate">Donate via PayPal</string>

    <string name="driver_unavailable">Driver is not available</string>
    <string name="no_device_found">No device was found</string>
    
    <string name="hw_accel">Enable NEON optimized code</string>
    <string name="hw_accel_on">NEON optimizations enabled</string>
    <string name="hw_accel_off">NEON optimizations disabled</string>
    <string name="hw_accel_unavail">NEON optimizations unavailable</string>
    
    <string name="device_start">Click to open…</string>
</resources>
